Update GitHub Packages token and add JVM argument in pom.xml
- Renamed `packages_token_ro` to `packages_token` in `setup-maven` action and workflows.
- Replaced `PACKAGES_TOKEN_RO` with `PACKAGES_TOKEN_RW` for read-write access in workflows.
- Added JVM argument `--add-opens java.base/java.lang=ALL-UNNAMED` in `pom.xml`.