@@ -470,6 +470,7 @@
                             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                             <maven.home>${maven.home}</maven.home>
                         </systemPropertyVariables>
+                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -528,6 +529,9 @@
                             </goals>
                         </execution>
                     </executions>
+                    <configuration>
+                        <jvmArgs>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArgs>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
